Null cursor fix for Chrome
See
http://icelab.com.au/articles/invisible-cursors-in-google-chrome-with-css/

--- a/source/css/maya.css
+++ b/source/css/maya.css
@@ -1,3 +1,5 @@
+* { cursor: url(../../assets/template/img/cursor.png), none !important }
+
 body {
   padding: 0;
   margin: 0;
